--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body class="sora-font">
     <!-- navbar -->
-    <nav class="container mx-auto">
+    <nav class="container border border-[#179800] lg:border-0">
         <div class="navbar bg-base-100">
             <div class="navbar-start">
 
@@ -86,7 +86,7 @@
     </nav>
 
     <!-- banner -->
-    <section>
+    <section class="lg:mt-20">
         <div class="hero bg-gradient-to-b from-white to-[#EFEBE3] min-h-screen">
             <div class="hero-content text-center">
                 <div class="max-w-3xl">
@@ -98,14 +98,16 @@
                         Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got
                         you covered every day!
                     </p>
-                    <img class="w-full" src="./images/hero-vegetables.png" alt="">
+                    <div class="relative top-24 lg:top-4">
+                        <img class="w-full" src="./images/hero-vegetables.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- services -->
-    <section>
+    <section class="mt-20">
         <h3 class="text-[#179800] text-4xl font-semibold ml-7 md:ml-44">Services</h3>
         <div class="flex flex-col justify-center items-center md:flex-row gap-5">
             <div class="card bg-[#efebe3] w-80 shadow-xl">
@@ -153,6 +155,165 @@
         </div>
     </section>
 
+    <!-- popular-products -->
+    <section class="bg-[#efebe3] my-20">
+        <h3 class="text-[#179800] text-4xl font-semibold ml-7 lg:ml-36 py-10">Popular Products</h3>
+        <div class="flex flex-col justify-center items-center lg:flex-row gap-3">
+            <div class="popular-left ">
+                <div
+                    class="w-[350px] h-[340px] bg-gradient-to-t from-emerald-100 to-emerald-500 shadow-xl rounded-lg p-6 relative">
+                    <h2 class="text-2xl font-bold text-[#ffffff] absolute top-6 left-6 mt-5">30% off</h2>
+                    <p class="text-gray-700 mt-20 text-sm ">Discover a world of treats, toys, and essentials
+                        handpicked for</p>
+                    <button
+                        class="bg-white text-black font-semibold mt-5 px-6 py-2 rounded-md shadow-md border border-gray-300">Buy
+                        Now</button>
+                    <div class="absolute top-36 right-0">
+                        <img src="./images/vegetable-offer.png" alt="Banana and Spinach" class="w-[240px] h-[196px]" />
+                    </div>
+                </div>
+
+            </div>
+            <div class="popular-right grid grid-cols-2  lg:grid-cols-3 gap-4 mx-4">
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[170px] h-[100px] lg:w-[230px] ">
+                    <div class="flex gap-5 p-4">
+                        <img src="./images/onion.png" class=" rounded-lg bg-[#efebe3] w-1/3 " />
+                        <div>
+                            <p class="text-[10px] lg:text-[14px]"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
+                            </p>
+                            <h5 class="text-[14px] font-bold lg:text-[20px]">Onion 1 KG</h5>
+                            <p class="text-[10px] lg:text-[14px]">
+                                $39.99
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+            </div>
+
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
