--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got
                         you covered every day!
                     </p>
-                    <div class="relative bottom-0">
+                    <div class="relative top-[100px] lg:top-[0.25px] ">
                         <img class="w-full" src="./images/hero-vegetables.png" alt="">
                     </div>
                 </div>
@@ -319,7 +319,7 @@
     <section class="my-20">
         <h3 class="text-[#179800] text-4xl font-semibold ml-7 lg:ml-36 py-10">Arrival & Offers</h3>
         <div class="flex flex-col justify-center items-center lg:flex-row gap-4">
-            green
+            <!-- green -->
             <div class="card card-side bg-[#115414] pt-5 shadow-xl w-[350px]  lg:w-[600px] lg:h-[295px]">
                 <div class="card-body text-left p-5">
                     <div class="mr-[90px]"><img src="./images/dawat-logo.png" alt=""></div>
@@ -334,7 +334,7 @@
                     <img class="w-full" src="./images/dawat-mock-up.png" alt="" />
                 </figure>
             </div>
-            blue
+            <!-- blue -->
             <div class="card card-side bg-[#102861]  shadow-xl w-[350px] h-[230px] lg:w-[450px] lg:h-[295px] pt-5">
                 <div class="card-body text-left lg:p-5">
                     <div class="mr-[90px]"><img class="w-[40%]" src="./images/india-gate-logo.png" alt=""></div>
