--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             margin: 0;
             padding: 0;
         }
+
+        @media screen and (max-width: 576px) {
+            .banner-pic {
+                top: 100px;
+            }
+        }
     </style>
 
 </head>
@@ -98,7 +104,8 @@
                         Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got
                         you covered every day!
                     </p>
-                    <div class="relative top-[100px] lg:top-[0.25px] ">
+                    <!-- top-[100px] lg:top-[0.25px] -->
+                    <div class="banner-pic relative bottom-0 ">
                         <img class="w-full" src="./images/hero-vegetables.png" alt="">
                     </div>
                 </div>
