--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
             margin: 0;
             padding: 0;
         }
-
-        @media screen and (max-width: 576px) {
-            .banner-pic {
-                top: 100px;
-            }
-        }
     </style>
 
 </head>
@@ -92,23 +86,19 @@
     </nav>
 
     <!-- banner -->
-    <section class="lg:mt-20">
-        <div class="hero bg-gradient-to-b from-white to-[#EFEBE3] min-h-screen">
-            <div class="text-center">
-                <div class="max-w-3xl">
-                    <h1 class="text-5xl font-bold">Freshness <span class="text-[#179800]">You Can</span>
-                        <br>
-                        <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
-                    </h1>
-                    <p class="py-6">
-                        Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got
-                        you covered every day!
-                    </p>
-                    <!-- top-[100px] lg:top-[0.25px] -->
-                    <div class="banner-pic relative bottom-0 ">
-                        <img class="w-full" src="./images/hero-vegetables.png" alt="">
-                    </div>
-                </div>
+    <section class="bg-gradient-to-b from-white to-[#EFEBE3] text-center lg:pt-10 lg:pr-32 lg:pl-32">
+        <div>
+            <h1 class="text-3xl p-2 pt-10 lg:text-5xl font-bold">Freshness <span class="text-[#179800]">You
+                    Can</span>
+                <br>
+                <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
+            </h1>
+            <p class="lg:pt-6 lg:px-56">
+                Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got
+                you covered every day!
+            </p>
+            <div>
+                <img src="./images/hero-vegetables.png" alt="">
             </div>
         </div>
     </section>
@@ -308,16 +298,7 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
             </div>
-
         </div>
         </div>
     </section>
@@ -334,8 +315,6 @@
                         <button class="btn bg-[#63b76d] text-white hover:bg-[#63b76d]">Cook Exotic Dishes</button>
                     </div>
                     <h4 class="card-title text-[28px] text-white">UP to 20% OFF</h4>
-
-
                 </div>
                 <figure class="pt-5">
                     <img class="w-full" src="./images/dawat-mock-up.png" alt="" />
@@ -417,7 +396,7 @@
 
 
     <!-- floating card -->
-    <section class="">
+    <section>
         <div
             class="bg-[#efebe3] p-5 text-center w-[320px] relative top-64 rounded-2xl lg:top-44 lg:flex items-center justify-between lg:w-[1100px] mx-auto">
             <div class="pic-left">
