--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <h3 class="text-[#179800] text-4xl font-semibold ml-7 lg:ml-36 py-10">Snacks</h3>
         <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
             <div
-                class="bg-[#efebe3] p-4 text-center w-[350px] rounded-2xl transition-transform transform hover:scale-105 hover:shadow-2xl duration-300 ease-in-out animate-pulse">
+                class="bg-[#efebe3] p-4 text-center w-[350px] rounded-2xl transition-transform transform hover:scale-105 hover:shadow-2xl duration-300 ease-in-out ">
                 <div class="avatar">
                     <div class="w-36 rounded-xl">
                         <img src="./images/pringels.png" alt="">
@@ -375,7 +375,7 @@
 
             </div>
             <div
-                class="bg-[#efebe3] p-4 text-center  w-[350px] rounded-2xl transition-transform transform hover:scale-105 hover:shadow-2xl duration-300 ease-in-out animate-pulse">
+                class="bg-[#efebe3] p-4 text-center  w-[350px] rounded-2xl transition-transform transform hover:scale-105 hover:shadow-2xl duration-300 ease-in-out">
                 <div class="avatar">
                     <div class="w-36 rounded-xl">
                         <img src="./images/biscuits.png" alt="">
