--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div>
 
                     <h2 class="text-4xl font-bold">Pringles</h2>
-                    <p class="text-xl font-semibold">2.92$</p>
+                    <p class="text-xl font-semibold">Price: 2.92$</p>
                     <p class="text-xl font-semibold"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
                     </p>
                 </div>
@@ -368,7 +368,7 @@
                 <div>
 
                     <h2 class="text-4xl font-bold">Chicken Roll</h2>
-                    <p class="text-xl font-semibold">1.2$</p>
+                    <p class="text-xl font-semibold">Price: 1.2$</p>
                     <p class="text-xl font-semibold"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
                     </p>
                 </div>
@@ -384,7 +384,7 @@
                 <div>
 
                     <h2 class="text-4xl font-bold">Biscuits</h2>
-                    <p class="text-xl font-semibold">6$</p>
+                    <p class="text-xl font-semibold">Price: 6$</p>
                     <p class="text-xl font-semibold"><i class="fa-solid fa-star text-yellow-500"></i> 4.5
                     </p>
                 </div>
