--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- services -->
     <section class="mt-20">
-        <h3 class="text-[#179800] text-4xl font-semibold ml-7 lg:ml-44">Services</h3>
+        <h3 class="text-[#179800] text-4xl font-semibold ml-7 lg:ml-44 py-10">Services</h3>
         <div class="flex flex-col justify-center items-center lg:flex-row gap-5">
             <div class="card bg-[#efebe3] w-80 shadow-xl">
                 <figure class="px-10 pt-10">
