--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title">24/7 Services </h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <p>It provides essentials anytime, day or night.</p>
 
                 </div>
             </div>
@@ -131,7 +131,7 @@
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title">Fast Delivery</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <p>It brings essentials to your door in minutes.</p>
 
                 </div>
             </div>
@@ -145,7 +145,7 @@
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title">Healthy Products </h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <p>Healthy products for a better, natural lifestyle.</p>
 
                 </div>
             </div>
