--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
     <footer class="bg-[#179800] text-white w-auto">
         <div
-            class="flex flex-col justify-start gap-10 pt-80 pb-5 pr-5 pl-5  lg:flex-row lg:justify-center lg:items-center lg:gap-20">
+            class="flex flex-col justify-start gap-10 pt-80 pb-5 pr-5 pl-5 ml-5 lg:flex-row lg:justify-center lg:items-center lg:gap-20">
             <div class="left-side w-56">
                 <div>
                     <img src="./images/footer.png" alt="">
