--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     <!-- banner -->
     <section class="bg-gradient-to-b from-white to-[#EFEBE3] text-center lg:pt-10 lg:pr-32 lg:pl-32">
         <div>
-            <h1 class="text-3xl p-2 pt-10 lg:text-5xl font-bold">Freshness <span class="text-[#179800]">You
+            <h1
+                class="text-3xl p-2 pt-10 lg:text-5xl font-bold transition-all duration-500 ease-in-out hover:scale-125 hover:rotate-1">
+                Freshness <span class="text-[#179800]">You
                     Can</span>
                 <br>
                 <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
@@ -98,10 +100,14 @@
                 you covered every day!
             </p>
             <div>
-                <img src="./images/hero-vegetables.png" alt="">
+                <img src="./images/hero-vegetables.png">
             </div>
         </div>
     </section>
+
+
+
+
 
     <!-- services -->
     <section class="mt-20">
